<resources>
    <string name="app_name">Movies app</string>
    <string name="action_settings">Settings</string>
    <string name="search_people">Search Popular People</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="birthday">BirthDay:</string>
    <string name="biography">Biography</string>
    <string name="gallery">Gallery</string>
    <string name="known_for">known for:</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yes">yes</string>
    <string name="ibtakar">Ibtakar</string>
    <string name="permission_dialog_message">to be able to download image you need to give permission first</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_action">Search Action</string>
    <string name="toast_search">Search was clicked</string>
    <string name="toast_gallery">gallery was clicked</string>
</resources>
